# R-Type-Mirror

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: rtype.yml
lib/: CMakeLists.txt
lib/ECS2/: CMakeLists.txt
lib/ECS2/include/ECS2/: components.h  ecs2.h  entity.h  maths.h
lib/ECS2/src/: ecs2.cpp
lib/ECS2/src/Core/: EntityManager.cpp  EntityManager.hpp
lib/ECS2/src/Utils/: packed_array.hpp  sparse_array.hpp
lib/SocketManager/: CMakeLists.txt
lib/SocketManager/include/SocketManager/: ISocketManager.hpp  SocketManager.hpp
lib/SocketManager/src/linux/: LinuxSocket.cpp  LinuxSocket.hpp
lib/SocketManager/src/windows/: WindowsSocket.cpp  WindowsSocket.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/server/: CMakeLists.txt
src/server/src/: main.cpp
unitTest/: CMakeLists.txt
unitTest/src/ECS/: entity.cpp
